add simple code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
     lintOptions {
         abortOnError false
     }
-
 }
 
 dependencies {
@@ -30,4 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':lib')
+    implementation 'com.android.volley:volley:1.1.1'
 }
