--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -42,9 +42,9 @@ dependencies {
 def siteUrl = 'http://huangxingwei.cn'
 publish {
     userOrg = 'quinnhuang'//bintray.com的用户名
-    repoName = 'xw-widget'//远程仓库名字,不指明，默认是上传到maven
+    repoName = 'widget'//远程仓库名字,不指明，默认是上传到maven
     groupId = 'com.xwdz'//jcenter上的路径
-    artifactId = 'QuietDownload'//项目名称
+    artifactId = 'QuietDownloader'//项目名称 QuietDownloader
     publishVersion = '0.0.1'//版本号
     desc = '下载器'//描述，不重要
     website = siteUrl//项目主页
