重新设置Configs配置

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -35,8 +35,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/ormlite-android-4.48.jar')
-    implementation files('libs/ormlite-core-4.48.jar')
+//    implementation files('libs/ormlite-android-4.48.jar')
+//    implementation files('libs/ormlite-core-4.48.jar')
+    //
+    implementation 'com.j256.ormlite:ormlite-android:4.48'
 }
 
 def siteUrl = 'http://huangxingwei.cn'
